[gd_scene load_steps=4 format=2]

[ext_resource path="res://stages/bg/bg.gd" type="Script" id=1]
[ext_resource path="res://shared/effects/shaking.tscn" type="PackedScene" id=2]
[ext_resource path="res://shared/effects/beam_spawner.tscn" type="PackedScene" id=3]

[node name="bg" type="Node2D"]

script = ExtResource( 1 )
offset_step = 0
current_stage = 0
texture = ""
boss_level = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="0"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

motion_scale = Vector2( 1, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 0 )
_sections_unfolded = [ "Motion", "Transform" ]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer" index="0"]

position = Vector2( 1920, 240.87 )
scale = Vector2( 1, 1.01564 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Pause", "Region", "Transform", "Visibility", "Z Index" ]

[node name="shaking" parent="." index="1" instance=ExtResource( 2 )]

[node name="hyper_velocity_effect" type="Node2D" parent="." index="2"]

[node name="beam_spawner_01" parent="hyper_velocity_effect" index="0" instance=ExtResource( 3 )]

[node name="beam_spawner_02" parent="hyper_velocity_effect" index="1" instance=ExtResource( 3 )]

[node name="beam_spawner_03" parent="hyper_velocity_effect" index="2" instance=ExtResource( 3 )]

position = Vector2( 0, 1 )

[node name="beam_spawner_04" parent="hyper_velocity_effect" index="3" instance=ExtResource( 3 )]

[node name="beam_spawner_05" parent="hyper_velocity_effect" index="4" instance=ExtResource( 3 )]

[node name="beam_spawner_06" parent="hyper_velocity_effect" index="5" instance=ExtResource( 3 )]

[node name="beam_spawner_07" parent="hyper_velocity_effect" index="6" instance=ExtResource( 3 )]

[node name="beam_spawner_08" parent="hyper_velocity_effect" index="7" instance=ExtResource( 3 )]

[node name="beam_spawner_09" parent="hyper_velocity_effect" index="8" instance=ExtResource( 3 )]

[node name="beam_spawner_10" parent="hyper_velocity_effect" index="9" instance=ExtResource( 3 )]


